--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/bahremsd/tmmax/issues"
   },
-  "homepage": "https://github.com/bahremsd/tmmax#readme"
+  "homepage": "https://github.com/bahremsd/tmmax#readme",
+  "publishConfig": {
+  "@YOUR-USERNAME:registry": "https://npm.pkg.github.com"
+}
 }
